fix thumbnail slider extra space

--- a/assets/component-slider.css
+++ b/assets/component-slider.css
@@ -49,7 +49,7 @@ slider-component.slider-component-full-width {
 
   .slider--mobile:after {
     content: "";
-    width: 0px;
+    width: 0;
     padding-left: 1.5rem;
   }
 
@@ -160,7 +160,7 @@ slider-component.slider-component-full-width {
 
   .slider--desktop:after {
     content: "";
-    width: 0px;
+    width: 0;
     padding-left: 5rem;
   }
 
