--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -968,6 +968,10 @@ a.product__text {
   grid-gap: 1rem;
 }
 
+.slider--mobile.thumbnail-list:after {
+  content: none;
+}
+
 @media screen and (min-width: 750px) {
   .product--stacked .thumbnail-list {
     display: none;
